# Explosion

./: CMakeLists.txt  README.md  fileviewmodel.cpp  fileviewmodel.h  main.cpp  ribbonbar.cpp  ribbonbar.h  searchmanager.cpp  searchmanager.h
tabs/: filetab.cpp  filetab.h  hometab.cpp  hometab.h  sharetab.cpp  sharetab.h  viewtab.cpp  viewtab.h
